tests/instantiating/reset_value_invalid_type/stderr.golden
error: reset-value property must be of type integer or bit string, current type float
bus.fbd +2:27
   |
 2 |   c config; reset-value = 3.14
   |                           ^^^^
